apps/tracearr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tracearr
  namespace: tracearr
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Tracearr
    gethomepage.dev/description: Plex monitoring
    gethomepage.dev/icon: mdi-chart-timeline-variant
    gethomepage.dev/href: "https://tracearr.net.ecksd.ee"
    gethomepage.dev/pod-selector: app.kubernetes.io/name=tracearr,app.kubernetes.io/instance=tracearr,app.kubernetes.io/component=server
spec:
  parentRefs:
    - name: shared
      namespace: gateway
  hostnames:
    - tracearr.net.ecksd.ee
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: tracearr
          port: 3000
